--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -34,7 +34,7 @@ echo "This is a bash shell command that you can copy/paste by clicking"
 
 You will be using Red Hat CodeReady Workspaces, an online IDE based on https://www.eclipse.org/che/[Eclipe Che,window=_blank]. **Changes to files are auto-saved every few seconds**, so you don't need to explicitly save changes.
 
-To get started, {{ CHE_URL }}[access the Che instance,window=_blank] and log in using the username and password you've been assigned (e.g. `{{ USER_NAME }}/{{ USER_PASSWORD }}`):
+To get started, {{ CHE_URL }}[access the Che instance,window=_blank] and log in using the username and password you've been assigned (e.g. `{{ CHE_USER_NAME }}/{{ CHE_USER_PASSWORD }}`):
 
 image::che-login.png[login,400]
 
